Картинку альбома добавил

--- a/MusicPlayer/MusicPlayer.csproj
+++ b/MusicPlayer/MusicPlayer.csproj
@@ -93,6 +93,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asserts\album.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asserts\play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asserts\pause.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
